# test-repo

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: app.py  utils.py
src/data/: automotive_data.csv
src/plotting/: __init__.py  charts.py
src/processing/: __init__.py  transform.py
tests/: __init__.py
tests/unit/: test_utils.py
tests/unit/processing/: __init__.py  test_transform.py
