[project]
name = "automotive-data-dashboard"
version = "0.1.0"
description = "A lightweight Streamlit app to process, analyze, and visualize automotive data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.28.0",
  "pandas>=2.0.0",
  "plotly>=5.17.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "pytest-mock",
]

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--cov",
  "--cov-config=pyproject.toml",
  "--import-mode=importlib",
  "--color=yes",
]
minversion = "7.0"
norecursedirs = ["__pycache__", "docs", "*.egg-info", ".git", ".tox", ".venv"]
testpaths = [
  "tests/unit",
]

[tool.coverage.run]
source = [
  "src",
]
omit = [
  "*/__init__.py",
  "*/__main__.py",
  "*/test_*.py",
  "src/app.py",
  "src/plotting/*",
]

[tool.coverage.report]
fail_under = 65
show_missing = true
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # Don't complain about missing debug-only code:
  "def __repr__",
  "if self.debug",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if 0:",
  "if __name__ == .__main__.:",
]
